feat: basic mobile support AL-2208

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,28 @@
 body,
 #root,
-.App,
-.ant-layout {
+.app {
   height: 100%;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   background-color: rgb(40, 44, 52);
+  color: #fff;
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 1rem;
 }
 
 .content {
-  height: 100%;
-}
-
-.logo {
-  height: 31px;
-  float: left;
-  color: #fff;
-  font-size: 20px;
-  vertical-align: middle;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-top: 1rem;
 }
 
 .ant-slider-rail {
